testsuite/veronac/codegen/compile-fail/main-class-has-generics.out/stderr.txt
main-class-has-generics.verona:4:7: error: Class 'Main' must not be generic
class Main[X] {
      ^~~~
1 error generated
